# Test

./: CMakeLists.txt  c1.c  c2.c  c3.c  c4.c  c5.c  func_pointer.c  lab51.c  lab51.h  lab52.c  lab52.h  ref.c  test.c  test2.c  test3.c  testData.c  testData.h
crossList/: crossListTest.c  crosslist.c  crosslist.h
liner_list/: linerlist_test.c  linked_list.c  linked_list.h  list.c  list.h  simple_vector.c  simple_vector.h
matrix/: matrixTest.c  tsmatrix.c  tsmatrix.h
string/: algo.c  algo.h  dsstring.c  dsstring.h  string_test.c
