cmake_minimum_required(VERSION 3.20)
project(Test C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED true)
if ("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU" AND "${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
    add_compile_options(-fexec-charset=GBK -finput-charset=UTF-8)
endif ()
add_library(testData testData.c)
add_executable(Test test.c)
add_executable(C5 c5.c test2.c)
add_executable(REF ref.c)
add_executable(Test2 test2.c lab51.h lab51.c)
add_executable(Test3 test3.c lab52.h lab52.c)
target_link_libraries(Test testData)