cmake_minimum_required(VERSION 3.20)
project(Test C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED true)
if ("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU" AND "${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
    add_compile_options(-fexec-charset=GBK -finput-charset=UTF-8 -Wall)
endif ()
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/source-charset:utf-8>")
add_executable(Test test.c testData.c)
add_executable(C5 c5.c test2.c )
add_executable(REF ref.c)
add_executable(Test2 test2.c lab51.h lab51.c)
add_executable(Test3 lab52.h lab52.c test3.c)
add_executable(LinerListTest liner_list/linerlist_test.c liner_list/list.h liner_list/list.c liner_list/linked_list.c liner_list/linked_list.h liner_list/simple_vector.c liner_list/simple_vector.h)
add_executable(StringTest string/dsstring.c string/dsstring.h string/string_test.c string/algo.c string/algo.h)
add_executable(MatrixTest matrix/matrixTest.c matrix/tsmatrix.c matrix/tsmatrix.h)
add_executable(CrossListTest crossList/crossListTest.c crossList/crosslist.c crossList/crosslist.h)